When setting the DPMS mode manually, clear the timeouts

Based on a patch from Michael Vogt, many thanks.

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=660482